# pipeGEM

./: .readthedocs.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  ci_self_hosted.yml
docs/: requirements.txt
docs/source/: 1_basic.ipynb  2_data.ipynb  3_tasks.ipynb  4_MEM.ipynb  4_pipelines.ipynb  5_constraints.ipynb  5_flux_simulation.ipynb  6_pruning.ipynb  7_tradeoff.ipynb  8_regulation.ipynb  api.rst  conf.py  index.rst  pipeGEM.analysis.rst  pipeGEM.analysis.tasks.rst  pipeGEM.core.rst  pipeGEM.data.rst  pipeGEM.integration.algo.rst  pipeGEM.integration.constraints.rst  pipeGEM.integration.rst  pipeGEM.integration.utils.rst  pipeGEM.pipeline.algo.rst  pipeGEM.pipeline.rst  pipeGEM.plotting.rst  pipeGEM.rst  pipeGEM.utils.rst  quickstart.rst
docs/source/api/: analysis.rst  data.rst  group.rst  index.rst  integration.rst  model.rst  pipeGEM.analysis.rst  pipeGEM.analysis.tasks.rst  pipeGEM.cli.rst  pipeGEM.data.rst  pipeGEM.integration.rst  pipeGEM.rst  results.rst  task.rst  threshold.rst
docs/source/tutorial/: 1_basic.ipynb  2_data.ipynb  3_model_testing.ipynb  4_MEM.ipynb  5_flux_simulation.ipynb  index.rst
enzyme_data/human/: human-gem.csv
medium/: DMEM.csv  DMEM.tsv  DMEM_high_FFA.tsv  Hams.tsv  serum.tsv
pipeGEM/: __init__.py  _constant.py
pipeGEM/analysis/: __init__.py  _analysis.py  _consistency.py  _dim_reduction.py  _flux.py  _gapsplit.py  _ko.py  _mapping.py  _problem.py  _reducing.py  _stat.py  _threshold.py  _utils.py
pipeGEM/analysis/graph/: _transform.py
pipeGEM/analysis/lp/: _FASTCORE.py  _SWIFTCORE.py  __init__.py
pipeGEM/analysis/pathway/: __init__.py  _base.py
pipeGEM/analysis/results/: __init__.py  _base.py  _file_manager.py  consistency.py  corr.py  data.py  dim_reduction.py  flux_analysis.py  group_comp.py  integration.py  ko_analysis.py  scaling.py  stat.py  task.py  thresholds.py
pipeGEM/analysis/scaling/: __init__.py  _base.py  _scalers.py
pipeGEM/analysis/tasks/: __init__.py  _base.py  _var.py  gapfill.py  task.py
pipeGEM/cli/: __main__.py  _doc.py  _io.py  _main.py  _utils.py
pipeGEM/cli/configs/: comparison.toml  gene_data.toml  mapping.toml  model.toml  multi_model.toml  threshold.toml
pipeGEM/core/: __init__.py  _base.py  _batch.py  _builders.py  _group.py  _groups.py  _model.py  _models.py  _problem.py
pipeGEM/data/: __init__.py  _base.py  data.py  fetching.py  omic.py  preprocessing.py  synthesis.py
pipeGEM/integration/: __init__.py  _class.py  mapping.py
pipeGEM/models/: __init__.py  _batch.py  _builders.py  _groups.py  _models.py
pipeGEM/pipeline/: __init__.py  _base.py  _job.py  model.py  plotting.py  preprocessing.py  task.py  threshold.py
pipeGEM/plotting/: __init__.py  _bar.py  _class.py  _flux.py  _prep.py  _utils.py  categorical.py  curve.py  heatmap.py  scatter.py
pipeGEM/utils/: __init__.py  _calc.py  _class.py  _factory.py  _io.py  _manipulate.py  _scaling.py  _selection.py  _warning.py  transform.py
pipeGEM/visualization/: heatmap.py
tasks/: task_for_Mouse_GEM.json  tasks.json  tasks_for_human1.json  tasks_for_imm1415.json  tasks_human1.json  tasks_recon3d.json
tests/: conftest.py  test_algos.py  test_analysis.py  test_core.py  test_pipeline.py  test_plotting.py  test_problems.py
tests/analysis/: test_consistency.py  test_flux_analysis.py  test_model_comp.py  test_tasks.py  test_threshold.py
tests/cli/: test_commands.py
tests/core/: test_core.py  test_data.py  test_group.py  test_model.py  test_problems.py
tests/data/: test_fetching.py  test_gene_data.py  test_medium_data.py  test_synthesis.py
tests/integration/: test_CORDA.py  test_MBA.py  test_algos.py  test_iMAT.py  test_mCADRE.py
tests/plotting/: test_heatmap.py  test_plot_flux.py  test_plotting.py  test_scatter.py
(+67 files in other folders)
