[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeGEM"
version = "0.0.1a1"
description = "Processing and integrating data with genome-scale metabolic models (GEM)"
readme = "README.md"
authors = [{ name = "Yu-Te Lin", email = "qwerty239qwe@gmail.com" }]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["metabolism", "metabolic-model", "computational-biology", "system-biology", "cobra"]
dependencies = [
    "cobra",
    "pandas",
    "numpy",
    "scipy",
    "matplotlib",
    "requests",
    "scikit-learn",
    "scikit-posthocs",
    "seaborn",
    "umap-learn",
    "biodbs",
    "tqdm",
    "optlang",
    "networkx",
    "zeep",
    "pint",
    "pingouin",
    "scanpy",
    "tomlkit",
    "dask"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pip-tools",
    "pytest",
    "flake8"
]
doc = [
    "numpydoc",
    "nbconvert",
    "ipykernel",
    "sphinx",
    "sphinx-copybutton",
    "sphinx-issues",
    "sphinx-design",
    "pydata_sphinx_theme",
    "myst-nb",
    "ipywidgets"
]
dlkcat = [
    "torch",
    "rdkit"
]

[project.urls]
Homepage = "https://github.com/qwerty239qwe/pipeGEM"

[project.scripts]
pipegem = "pipeGEM.cli:main"